--- a/Bank_Exit_Predictions_ANN.ipynb
+++ b/Bank_Exit_Predictions_ANN.ipynb
@@ -988,9 +988,9 @@
         "outputId": "c10db7ee-b042-45f1-d885-d231cb838e91"
       },
       "source": [
-        "hw_pred = classifier.predict(sc.transform([[0, 1, 0, 700, 0, 35, 3, 34300, 3, 1, 1, 117000]]))\n",
-        "hw_pred = (hw_pred > 0.5) #just to now round the values to true or false\n",
-        "print(hw_pred)"
+        "new_pred = classifier.predict(sc.transform([[0, 1, 0, 700, 0, 35, 3, 34300, 3, 1, 1, 117000]]))\n",
+        "new_pred = (new_pred > 0.5) #just to now round the values to true or false\n",
+        "print(new_pred)"
       ],
       "execution_count": 13,
       "outputs": [
