--- a/Bank_Exit_Predictions_ANN.ipynb
+++ b/Bank_Exit_Predictions_ANN.ipynb
@@ -90,7 +90,7 @@
         "outputId": "9a7bc92f-574b-433c-af00-b7d008952b38"
       },
       "source": [
-        "dataset = pd.read_csv('ANN/Churn_Modelling.csv')\n",
+        "dataset = pd.read_csv('/Churn_Modelling.csv')\n",
         "X = dataset.iloc[:, 3:-1].values #take all rows and index columns from 3 to 12, cuz the first 3 (row number, name, customer ID) have no affect on results\n",
         "y = dataset.iloc[:, -1].values #take all rows of column 13 (last one) is the result we're looking for, which is whether they exited or not\n",
         "\n",
